--- a/tigamap/templates/tigamap/report_map.html
+++ b/tigamap/templates/tigamap/report_map.html
@@ -21,6 +21,14 @@
 
         function map_init_basic(map, options) {
 
+            map.on('zoomend', function(e){
+                saveMapState(map)
+            });
+            map.on('dragend', function(e){
+                saveMapState(map)
+            });
+
+
 
             var markers_clustered = new L.MarkerClusterGroup();
 
