--- a/tigamap/templates/tigamap/app.html
+++ b/tigamap/templates/tigamap/app.html
@@ -26,7 +26,7 @@
                         {% for language in languages %}
                             <option value="{{ language.code }}"{% if language.code == LANGUAGE_CODE %}
                                     selected="selected"{% endif %}>
-                                {{ language.name_local }}
+                                {{ language.name_local|title }}
                             </option>
                         {% endfor %}
                     </select>
