--- a/tigahelp/static/tigahelp/policystyle.css
+++ b/tigahelp/static/tigahelp/policystyle.css
@@ -53,7 +53,7 @@ label {
  * I want my pure-button elements to look a little different
  */
 .pure-button {
-    background-color: #EBB101;
+    background-color: Grey;
     color: Black;
     padding: 0.5em 2em;
     border-radius: 5px;
@@ -74,7 +74,7 @@ a.pure-button-primary {
  */
 
 .splash-container {
-    background: #EBB101;
+    background: White;
     z-index: 1;
     overflow: hidden;
     /* The following styles are required for the "scroll-over" effect */
