--- a/tigahelp/templates/tigahelp/policies_ca.html
+++ b/tigahelp/templates/tigahelp/policies_ca.html
@@ -21,7 +21,7 @@
 
 <div class="splash-container">
     <div class="splash">
-        <h1 class="splash-head">Polítiques</h1>
+        <div class="splash-head"><img src="{% static "tigahelp/atrapaeltigre_site_icon_large.png" %}"/></div>
 
         <p>
             <a class="pure-button pure-button-primary" href="/terms/en/">Acord de l'usuari</a>
