--- a/tigahelp/templates/tigahelp/base.html
+++ b/tigahelp/templates/tigahelp/base.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no"/>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
     <title>{% block page_title %}{% endblock %}</title>
-    <link rel='stylesheet' href={% static "tigahelp/tigastyle.css" %}/>
+    <link rel='stylesheet' href="{% static "tigahelp/tigastyle.css" %}"/>
 </head>
 <body>
 
