even more improved popups

--- a/tigamap/templates/tigamap/report_map.html
+++ b/tigamap/templates/tigamap/report_map.html
@@ -74,7 +74,7 @@ td {
                     if(show_popups){
                     {% if report_type == 'adults' %}
                         popup_text = '<table><tr><td>prob:</td><td>'+
-                                '{{ report.tigaprob }}</td></tr><tr><td>lat:</td>'+
+                                '{{ report.tigaprob_text }}</td></tr><tr><td>lat:</td>'+
                                 '<td>{{ report.lat }}</td></tr><tr><td>lon:</td><td>'+
                                 '{{ report.lon }}</td></tr></table>';
                    {%  else %}
