--- a/tigamap/templates/tigamap/base.html
+++ b/tigamap/templates/tigamap/base.html
@@ -10,6 +10,22 @@
     {% leaflet_css %}
     <script src="{% static "tigamap/tigamap_scripts.js" %}"></script>
 
+
+  <!-- Begin Cookie Consent plugin by Silktide - http://silktide.com/cookieconsent -->
+<link rel="stylesheet" type="text/css" href="http://assets.cookieconsent.silktide.com/current/style.min.css"/>
+<script type="text/javascript" src="http://assets.cookieconsent.silktide.com/current/plugin.min.js"></script>
+<script type="text/javascript">
+// <![CDATA[
+cc.initialise({
+	cookies: {},
+	settings: {
+		consenttype: "implicit"
+	}
+});
+// ]]>
+</script>
+<!-- End Cookie Consent plugin -->
+
   {% block head_additions %}
 
 
