improved cookie warning

--- a/tigamap/templates/tigamap/app.html
+++ b/tigamap/templates/tigamap/app.html
@@ -4,10 +4,83 @@
 
 {% block head_additions %}
 
+     <script src="{% static "tigamap/tigamap_scripts.js" %}"></script>
+
     <link rel="stylesheet" href={% static "tigamap/bootstrap-3.1.1-dist/css/bootstrap.min.css" %}>
     <link rel="stylesheet" href={% static "tigamap/bootstrap-3.1.1-dist/css/bootstrap-theme.min.css" %}>
     <link rel="stylesheet" href={% static "tigamap/map_app_style.css" %}>
+<script>
+// Creare's 'Implied Consent' EU Cookie Law Banner v:2.4
+// Conceived by Robert Kent, James Bavington & Tom Foyster
 
+var dropCookie = true;                      // false disables the Cookie, allowing you to style the banner
+var cookieDuration = 14;                    // Number of days before the cookie expires, and the banner reappears
+var cookieName = 'complianceCookie';        // Name of our cookie
+var cookieValue = 'on';                     // Value of cookie
+
+function createDiv(){
+    var bodytag = document.getElementsByTagName('body')[0];
+    var div = document.createElement('div')
+    div.style.textAlign='center';
+    div.style.backgroundColor='#F6D10A'
+    div.setAttribute('id','cookie-law');
+    div.innerHTML = 'Our website uses cookies. By continuing we assume your permission to deploy cookies. For more information on our site policies, please see our <a href="{% url 'help.show_privacy' %}" rel="nofollow" title="Privacy Policy">privacy policy</a> and <a href="{% url 'help.show_terms' %}" rel="nofollow" title="User Agreement">user agreement</a>. <a class="close-cookie-banner href="javascript:void(0);" onclick="removeMe();"><span>X</span></a>';
+ // Be advised the Close Banner 'X' link requires jQuery
+
+    // bodytag.appendChild(div); // Adds the Cookie Law Banner just before the closing </body> tag
+    // or
+  bodytag.insertBefore(div,bodytag.firstChild); // Adds the Cookie Law Banner just after the opening <body> tag
+
+    document.getElementsByTagName('body')[0].className+=' cookiebanner'; //Adds a class tothe <body> tag when the banner is visible
+
+}
+
+
+function createCookie(name,value,days) {
+    if (days) {
+        var date = new Date();
+        date.setTime(date.getTime()+(days*24*60*60*1000));
+        var expires = "; expires="+date.toGMTString();
+    }
+    else var expires = "";
+    if(window.dropCookie) {
+        document.cookie = name+"="+value+expires+"; path=/";
+    }
+}
+
+function checkCookie(name) {
+    var nameEQ = name + "=";
+    var ca = document.cookie.split(';');
+    for(var i=0;i < ca.length;i++) {
+        var c = ca[i];
+        while (c.charAt(0)==' ') c = c.substring(1,c.length);
+        if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length,c.length);
+    }
+    return null;
+}
+
+function eraseCookie(name) {
+    createCookie(name,"",-1);
+}
+
+window.onload = function(){
+    if(checkCookie(window.cookieName) != window.cookieValue){
+        createDiv();
+    }
+}
+
+function removeMe(){
+	var element = document.getElementById('cookie-law');
+	element.parentNode.removeChild(element);
+    createCookie(window.cookieName,window.cookieValue, window.cookieDuration); // Create the cookie
+
+}
+
+//
+
+
+
+</script>
 
 {% endblock %}
 
@@ -81,6 +154,45 @@
             </ul>
         </div>
     </div>
+
+
+<div id="tigamap" class="leaflet-container-default"></div>
+<script type="text/javascript">
+(function () {
+
+    function loadmap() {
+
+				var centerLat = loadSavedLat();
+				var centerLng = loadSavedLng();
+				var initialZoom = loadSavedZoom();
+
+				if (isNaN(centerLat) || isNaN(centerLng)) {
+					centerLat = 40.0000;
+					centerLng = -4.0000;
+				}
+
+				if (isNaN(initialZoom)) {
+					initialZoom = 6;
+				}
+
+
+        var djoptions = {"layers": [["OSM", "http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",
+                    "\u00a9 <a href=\"http://www.openstreetmap.org/copyright\">OpenStreetMap</a> contributors"]],
+                    "minimap": false, "scale": "metric", "center": [centerLat, centerLng], "tilesextent": [],
+                    "attributionprefix": null, "zoom": initialZoom, "maxzoom": 18, "minzoom": 0, "extent": [[-90,
+                        -180], [90,
+                        180]], "resetview": true, "srid": null, "fitextent": true},
+            options = {djoptions: djoptions, initfunc: loadmap,
+                       globals: false, callback: window.map_init_basic};
+        L.Map.djangoMap('tigamap', options);
+    }
+    var loadevents = ["load"];
+    if (loadevents.length === 0) loadmap();
+    else if (window.addEventListener) for (var i=0; i<loadevents.length; i++) window.addEventListener(loadevents[i], loadmap, false);
+    else if (window.jQuery) jQuery(window).on(loadevents.join(' '), loadmap);
+
+})();
+</script>
 
 
 {% endblock %}
