--- a/tigamap/templates/tigamap/base.html
+++ b/tigamap/templates/tigamap/base.html
@@ -8,23 +8,9 @@
 
     {% leaflet_js %}
     {% leaflet_css %}
-    <script src="{% static "tigamap/tigamap_scripts.js" %}"></script>
+    <link rel="stylesheet" href={% static "tigamap/base_style.css" %}>
 
 
-  <!-- Begin Cookie Consent plugin by Silktide - http://silktide.com/cookieconsent -->
-<link rel="stylesheet" type="text/css" href="http://assets.cookieconsent.silktide.com/current/style.min.css"/>
-<script type="text/javascript" src="http://assets.cookieconsent.silktide.com/current/plugin.min.js"></script>
-<script type="text/javascript">
-// <![CDATA[
-cc.initialise({
-	cookies: {},
-	settings: {
-		consenttype: "implicit"
-	}
-});
-// ]]>
-</script>
-<!-- End Cookie Consent plugin -->
 
   {% block head_additions %}
 
@@ -54,43 +40,6 @@ cc.initialise({
 
     {% endblock %}
 
-<div id="tigamap" class="leaflet-container-default"></div>
-<script type="text/javascript">
-(function () {
-
-    function loadmap() {
-
-				var centerLat = loadSavedLat();
-				var centerLng = loadSavedLng();
-				var initialZoom = loadSavedZoom();
-
-				if (isNaN(centerLat) || isNaN(centerLng)) {
-					centerLat = 40.0000;
-					centerLng = -4.0000;
-				}
-
-				if (isNaN(initialZoom)) {
-					initialZoom = 6;
-				}
-
-
-        var djoptions = {"layers": [["OSM", "http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",
-                    "\u00a9 <a href=\"http://www.openstreetmap.org/copyright\">OpenStreetMap</a> contributors"]],
-                    "minimap": false, "scale": "metric", "center": [centerLat, centerLng], "tilesextent": [],
-                    "attributionprefix": null, "zoom": initialZoom, "maxzoom": 18, "minzoom": 0, "extent": [[-90,
-                        -180], [90,
-                        180]], "resetview": true, "srid": null, "fitextent": true},
-            options = {djoptions: djoptions, initfunc: loadmap,
-                       globals: false, callback: window.map_init_basic};
-        L.Map.djangoMap('tigamap', options);
-    }
-    var loadevents = ["load"];
-    if (loadevents.length === 0) loadmap();
-    else if (window.addEventListener) for (var i=0; i<loadevents.length; i++) window.addEventListener(loadevents[i], loadmap, false);
-    else if (window.jQuery) jQuery(window).on(loadevents.join(' '), loadmap);
-
-})();
-</script>
 
 
     {% block logo %}
