final changes to help and terms files; incremented version number for live android to display on map

--- a/tigahelp/templates/tigahelp/help_ca.html
+++ b/tigahelp/templates/tigahelp/help_ca.html
@@ -26,7 +26,7 @@
     i eliminar-les si creus que són errònies.
 
     <h2>Participa en missions</h2>
-    Participa en missions especials si t'apareix la icona del mosquit tigre al teu telèfon. En qualsevol moment podràs
+    Si utilitzes la versió Android de Tigatrapp, participa en missions especials si t'apareix la icona del mosquit tigre al teu telèfon. En qualsevol moment podràs
     realitzar la missió, deixar-la per més tard, o eliminar-la si no vols participar-hi. Consulta les missions pendents
     al menú principal.
 
@@ -37,15 +37,13 @@
 
     <h1>DESTÍ DE LES TEVES DADES</h1>
     Les teves dades s'enviaran al centre de recerca que coordina AtrapaelTigre.com, el Centre d'Estudis Avançats de
-    Blanes del Consell Superior d'Investigacions Científiques (CEAB-CSIC).
+    Blanes del Consell Superior d'Investigacions Científiques (CEAB-CSIC). Les dades s’utilitzen per millorar el coneixement de la dispersió del mosquit tigre i de les ciències ciutadanes i poden ser compartides amb terceres parts o el públic general.
 
-    Tigatrapp recull també dades de la posició aproximada del teu telèfon mòbil. Aquestes dades ens permeten enviar-te
-    missions especials i informar-te de les últimes novetats sobre el mosquit tigre en funció de la regió on vius. En
-    cap cas Tigatrapp recull dades personals.
+    Tigatrapp recull també dades de la posició aproximada del teu telèfon mòbil en intervals de temps aleatoris. Aquesta informació s’utilitza per conèixer i generar un mapa de les zones explorades pels usuaris de Tigatrapp i per millorar el coneixement sobre les vies de dispersió del mosquit tigre. Aquestes dades de posició són aproximades, i es recullen arrodonint la teva posició real als 0.05 graus de latitud i longitud més propers. Aquest mètode fa que sigui possible saber que estaves en una àrea aproximadament de la mida d’una ciutat petita com Blanes, però fa que sigui impossible saber la teva posició exacta dins d’aquesta àrea. Les localitzacions estan unides només al teu identificador, generat de manera aleatòria, però a cap informació que permeti la teva identificació personal.
 
     Part de les teves dades enviades es publiquen de manera automàtica al mapa web del mosquit tigre a la web del
-    projecte AtrapaelTigre.com. En qualsevol moment pots eliminar, editar i actualitzar aquestes dades, des del botó “EL
-    MEU MAPA”.
+    projecte AtrapaelTigre.com. En qualsevol moment pots eliminar, editar i actualitzar les dades publicades al mapa web, des del botó “EL
+    MEU MAPA”, seleccionant un informe.
 
     <h1>CONSULTA SI TENS MÉS DUBTES</h1>
     Consulta la <a href="http://www.atrapaeltigre.com">pàgina web</a> o escriu a
