--- a/tigahelp/templates/tigahelp/help_en.html
+++ b/tigahelp/templates/tigahelp/help_en.html
@@ -37,7 +37,7 @@ friends, or check the latest news from AtrapaelTigre.com.
 
 <h1>YOUR DATA</h1>
 The information you submit is sent to the Centre for Advanced Studies of Blanes (CEAB-CSIC), which is coordinating the
-AtrapaelTigre project. The data will be used to learn more about the spread of tiger mosquitoes in Spain and may be
+AtrapaelTigre project. The data will be used to learn more about the spread of tiger mosquitoes and may be
 shared with third parties or the public.
 
 Tigatrapp also collects coarse information on your location at random times throughout the day in order to generate a
@@ -48,7 +48,8 @@ impossible to know where you were in that area. The locations are linked only to
 personally-identifying information is collected.
 
 Parts of the data you share will be automatically published on the web map at AtrapaelTigre.com. At any time you can
-delete, edit and update the data on this map from your phone by clicking the "MY MAP" button on the main screen and
+delete, edit and update the data published on this map from your phone by clicking the "MY MAP" button on the main
+    screen and
 selecting a report.
 
 <h1>ADDITIONAL QUESTIONS</h1>
