--- a/tigahelp/templates/tigahelp/help_es.html
+++ b/tigahelp/templates/tigahelp/help_es.html
@@ -9,6 +9,8 @@
 {% block content %}
 
 
+
+
 <h1>PARTICIPA</h1>
 Participa en el estudio y seguimiento del mosquito tigre en España, enviando datos de lugares de cría y hallazgos de mosquito tigre. Infórmate de las últimas novedades y aprende a combatir el mosquito tigre en tu casa.
 
@@ -22,18 +24,19 @@ Utiliza los botones “ENVIA” para enviar informes de nuevos lugares de cría 
 Utiliza el botón “MI MAPA” para ver y controlar tus datos, editarlos si los quieres actualizar o corregir y eliminarlos si crees que son erróneos.
 
 <h2>Participa en misiones</h2>
-Participa en misiones especiales si te aparece el icono del mosquito tigre en tu teléfono. En cualquier momento podrás realizar la misión, dejarla para más tarde, o eliminarla si no quieres participar. Consulta las misiones pendientes en el menú principal.
+Si utilizas la versión Android de Tigatrapp, participa en misiones especiales si te aparece el icono del mosquito tigre en tu teléfono. En cualquier momento podrás realizar la misión, dejarla para más tarde, o eliminarla si no quieres participar. Consulta las misiones pendientes en el menú principal.
 
 <h2>Explora otras opciones</h2>
 Explora el botón de configuración en cada pantalla para acceder a opciones extras. Cambia el mapa base, comparte la App o consulta las últimas noticias del proyecto AtrapaelTigre.com.
 
 
 <h1>DESTINO DE TUS DATOS</h1>
-Tus datos se mandarán al centro de investigación que coordina AtrapaelTigre.com, el Centro de Estudios Avanzados de Blanes del Consejo Superior de Investigaciones Científicas (CEAB-CSIC). Estos datos serán utilizados para fines no lucrativos relacionados con la investigación, la educación ambiental, el control de especies invasoras, etc.
+Tus datos se enviarán al centro de investigación que coordina AtrapaelTigre.com, el Centro de Estudios Avanzados de
+    Blanes del Consejo Superior de Investigaciones Científicas (CEAB-CSIC). Los datos se utilizan para mejorar el conocimiento de la dispersión del mosquito tigre y de las ciencias ciudadanas y pueden ser compartidos con terceras partes o el público general.
 
-Tigatrapp recoge también datos de la posición aproximada de tu teléfono móvil, dentro de un radio de XXXkm. Estos datos nos permiten enviarte misiones especiales e informarte de las últimas novedades sobre el mosquito tigre en función de la región en la que vives. En ningún caso Tigatrapp recoge datos personales.
+Tigatrapp recoge también datos de la posición aproximada de tu teléfono móvil en intervalos de tiempo aleatorios. Esta información se utiliza para conocer y generar un mapa de las zonas exploradas por los usuarios de Tigatrapp y para mejorar el conocimiento sobre las vías de dispersión del mosquito tigre. Estos datos de posición son aproximados, y se recogen redondeando tu posición real a los 0.05 grados de latitud y longitud más cercanos. Este método hace que sea posible saber que estabas en un área aproximadamente del tamaño de una ciudad pequeña como Blanes, pero hace que sea imposible saber tu posición exacta dentro de esta área. Las localizaciones están unidas sólo a tu identificador, generado de manera aleatoria, pero a ninguna información que permita tu identificación personal.
 
-Parte de tus datos enviados se publican de manera automática en el mapa web del mosquito tigre en la web del proyecto AtrapaelTigre.com. En cualquier momento puedes eliminar, editar y actualizar estos datos, desde el botón “MI MAPA”.
+Parte de tus datos enviados se publican de manera automática en el mapa web del mosquito tigre en la web del proyecto AtrapaelTigre.com. En cualquier momento puedes eliminar, editar y actualizar los datos publicados en el mapa web, desde el botón “MI MAPA”, seleccionando un informe.
 
 <h1>CONSULTA SI TIENES MÁS DUDAS</h1>
 Si tienes dudas, consulta la <a href="http://www.atrapaeltigre.com">página web</a> o escribe a <a href="mailto:info@atrapaeltigre.com">info@atrapaeltigre.com</a>.
