--- a/tigahelp/templates/tigahelp/terms_en.html
+++ b/tigahelp/templates/tigahelp/terms_en.html
@@ -12,40 +12,19 @@
         <h2>User Agreement</h2>
     </div>
 
+<p>AtrapaelTigre is a citizen science project being implemented by the ICREA-Movement Ecology Laboratory at the Centre for Advanced Studies of Blanes (CEAB-CSIC) in cooperation with the Spanish National Resaerch Council and the University of Murcia.
 
-
-<p>AtrapaelTigre is a citizen science project being implemented by the ICREA-Movement Ecology Laboratory at the Centre
-for Advanced Studies of Blanes (CEAB-CSIC) in cooperation with the Spanish National Research Council and the
-    University of Murcia.</p>
-
-<p>The project relies on members of the public&mdash;citizen
-scientists&mdash;to collect data on the spread of tiger mosquitoes in Spain. You can participate by sharing
-data at AtrapaelTigre.com or through any of the Tigatrapp applications for mobile devices. To do so,
-you must be an adult or supervised by an adult and you must agree to the AtrapaelTigre privacy policy as well as the
-following terms:</p>
-
+<p>The project relies on members of the public&mdash;citizen scientists&mdash;to collect data on the spread of tiger mosquitoes in Spain. You can participate by sharing data at AtrapaelTigre.com or through any of the Tigatrapp applications for mobile devices. To do so, you must be an adult or supervised by an adult and you must agree to the AtrapaelTigre privacy policy as well as the following terms:
 <ol>
-    <li>
-        By sharing data with the AtrapaelTigre project, you grant the members of the research team a perpetual,
-        royalty-free, non-exclusive, sub-licensable license to: use, reproduce, modify, adapt, publish, translate,
-        create derivative works from, distribute, and exercise all copyright and publicity rights with respect to your
-        contribution worldwide and/or to incorporate your contribution in other works in any media now known or later
-        developed for the full term of any rights that may exist in your contribution.
-    </li>
-    <li>
-        You warrant that any data you share consists of information you have the right to make available to the
-        research team for the purposes specified
-        in item 1 above, is not defamatory, and does not infringe any law.
-    </li>
-    <li>
-        You indemnify the Movement Ecology Lab and its members and partners against all legal fees,
-        damages and other expenses that may be incurred by them as a
-        result of your breach of the above warranty.
-        </li>
-    <li>
-        You waive any moral rights in your contribution for the purposes
-        specified in item 1 above.
-    </li>
+   <li>By sharing data with the AtrapaelTigre project, you grant the members of the research team a perpetual, royalty-free, non-exclusive, sub-licensable license to: use, reproduce, modify, adapt, publish, translate, create derivative works from, distribute, and exercise all copyright and publicity rights with respect to your contribution worldwide and/or to incorporate your contribution in other works in any media now known or later developed for the full term of any rights that may exist in your contribution.</li>
+
+<li>You warrant that any data you share consists of information you have the right to make available to the research
+     team for the purposes specified in item 1 above, is not defamatory, and does not infringe any law.</li>
+
+<li>You indemnify the Movement Ecology Lab and its members and partners against all legal fees, damages and other expenses that may be incurred by them as a result of your breach of the above warranty.</li>
+
+<li>You waive any moral rights in your contribution for the purposes specified in item 1 above.</li>
 </ol>
+
 
 {% endblock %}
