added new filter to map views so only latest version of each report displayed and deleted reports disappear

--- a/tigahelp/templates/tigahelp/terms_en.html
+++ b/tigahelp/templates/tigahelp/terms_en.html
@@ -12,7 +12,8 @@
         <h2>User Agreement</h2>
     </div>
 
-<p>AtrapaelTigre is a citizen science project being implemented by the ICREA-Movement Ecology Laboratory at the Centre for Advanced Studies of Blanes (CEAB-CSIC) in cooperation with the Spanish National Resaerch Council and the University of Murcia.
+<p>AtrapaelTigre is a citizen science project being implemented by the ICREA-Movement Ecology Laboratory at the
+    Centre for Advanced Studies of Blanes (CEAB-CSIC) in cooperation with the Spanish National Research Council and the University of Murcia.
 
 <p>The project relies on members of the public&mdash;citizen scientists&mdash;to collect data on the spread of tiger mosquitoes in Spain. You can participate by sharing data at AtrapaelTigre.com or through any of the Tigatrapp applications for mobile devices. To do so, you must be an adult or supervised by an adult and you must agree to the AtrapaelTigre privacy policy as well as the following terms:
 <ol>
