--- a/tigamap/templates/tigamap/embedded.html
+++ b/tigamap/templates/tigamap/embedded.html
@@ -15,6 +15,26 @@
 
 {% block leaflet_code %}
 
+    <style>
+table {
+    border-collapse: collapse;
+    font-size:small;
+}
+
+table, td, th {
+    border: 1px solid black;
+}
+
+td {
+    padding: 5px;
+    vertical-align: top;
+    text-align: right;
+}
+
+
+</style>
+
+
     <script type="text/javascript">
 
         function map_init_basic(map, options) {
