improved coverage map - now calculating n_fixes for each area and avoiding overlapping polygons

--- a/tigamap/templates/tigamap/app.html
+++ b/tigamap/templates/tigamap/app.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href={% static "tigamap/bootstrap-3.1.1-dist/css/bootstrap-theme.min.css" %}>
     <link rel="stylesheet" href={% static "tigamap/map_app_style.css" %}>
 <script>
-// Creare's 'Implied Consent' EU Cookie Law Banner v:2.4
+// The following code is adapted from Creare's 'Implied Consent' EU Cookie Law Banner v:2.4
 // Conceived by Robert Kent, James Bavington & Tom Foyster
 
 var dropCookie = true;                      // false disables the Cookie, allowing you to style the banner
