better colors in stats

--- a/stats/templates/stats/chart.html
+++ b/stats/templates/stats/chart.html
@@ -79,11 +79,14 @@
             },
             series: [{
                 name: 'Citizen scientists',
-                data: users},
+                data: users,
+                color: '#2ca25f'},
                 {name: 'Breeding site reports',
-                 data: site_reports},
+                 data: site_reports,
+                 color: '#126FC6'},
                 {name: 'Tiger mosquito reports',
-                 data: adult_reports
+                 data: adult_reports,
+                 color: '#F6D10A'
             }]
         });
     });
