--- a/tigamap/templates/tigamap/coverage_map.html
+++ b/tigamap/templates/tigamap/coverage_map.html
@@ -1,11 +1,22 @@
 {% extends "tigamap/app.html" %}
-
 {% load staticfiles %}
+{% load i18n %}
+{% load leaflet_tags %}
 
 {% block leaflet_code %}
 
 <script type="text/javascript">
+
+
     function map_init_basic (map, options) {
+
+            map.on('zoomend', function(e){
+                saveMapState(map)
+            });
+            map.on('dragend', function(e){
+                saveMapState(map)
+            });
+
 
         var fo = .3;
 
